@@ -9,6 +9,7 @@ Revision history for Rex
  - Fix calling get_file_path from Rexfile
  - Fix quoting of rsync parameters
  - Fix local download rsync operations
+ - Fix determining local connections for rsync operations
 
  [DOCUMENTATION]
 
